tests/paczka1/fuzzy1/34495434.err
Error in line 9: ma77 A371 1,1
Error in line 11: 2w0hHNM S130 7,1
Error in line 35: nLFBv7Xu S130 63,1
Error in line 30: S121 A371 51,2
Error in line 32: Q2eSB5KVcV S130 84,7
